add constraints options, fix mm_prior_1

--- a/Analysis/ROSMAP_TWAS/MV_susie_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/MV_susie_analysis.ipynb
@@ -2120,6 +2120,211 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = readRDS(\"/home/hs3163/Project/Genome_prior/test/output/geneTpmResidualsAgeGenderAdj_rename.FL_PC3.ED.rds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'U'</li><li>'w'</li><li>'loglik'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'U'\n",
+       "\\item 'w'\n",
+       "\\item 'loglik'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'U'\n",
+       "2. 'w'\n",
+       "3. 'loglik'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"U\"      \"w\"      \"loglik\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "-5.02875"
+      ],
+      "text/latex": [
+       "-5.02875"
+      ],
+      "text/markdown": [
+       "-5.02875"
+      ],
+      "text/plain": [
+       "[1] -5.02875"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a1$loglik[length(a1$loglik)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A matrix: 6 × 2 of type chr</caption>\n",
+       "<tbody>\n",
+       "\t<tr><td>tFLASH</td><td>4.44289797178543e-59</td></tr>\n",
+       "\t<tr><td>PCA_1 </td><td>1.64072960136479e-56</td></tr>\n",
+       "\t<tr><td>PCA_2 </td><td>0                   </td></tr>\n",
+       "\t<tr><td>PCA_3 </td><td>0                   </td></tr>\n",
+       "\t<tr><td>tPCA  </td><td>6.2991541062655e-07 </td></tr>\n",
+       "\t<tr><td>XX    </td><td>0.999999370084618   </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 2 of type chr\n",
+       "\\begin{tabular}{ll}\n",
+       "\t tFLASH & 4.44289797178543e-59\\\\\n",
+       "\t PCA\\_1  & 1.64072960136479e-56\\\\\n",
+       "\t PCA\\_2  & 0                   \\\\\n",
+       "\t PCA\\_3  & 0                   \\\\\n",
+       "\t tPCA   & 6.2991541062655e-07 \\\\\n",
+       "\t XX     & 0.999999370084618   \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 2 of type chr\n",
+       "\n",
+       "| tFLASH | 4.44289797178543e-59 |\n",
+       "| PCA_1  | 1.64072960136479e-56 |\n",
+       "| PCA_2  | 0                    |\n",
+       "| PCA_3  | 0                    |\n",
+       "| tPCA   | 6.2991541062655e-07  |\n",
+       "| XX     | 0.999999370084618    |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1]   [,2]                \n",
+       "[1,] tFLASH 4.44289797178543e-59\n",
+       "[2,] PCA_1  1.64072960136479e-56\n",
+       "[3,] PCA_2  0                   \n",
+       "[4,] PCA_3  0                   \n",
+       "[5,] tPCA   6.2991541062655e-07 \n",
+       "[6,] XX     0.999999370084618   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cbind(names(a1$U), a1$w)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tol = 1E-15\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'tPCA'</li><li>'XX'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'tPCA'\n",
+       "\\item 'XX'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'tPCA'\n",
+       "2. 'XX'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"tPCA\" \"XX\"  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names(a1$U)[which(a1$w>tol)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_sharing = function(X) {\n",
+    "clrs <- colorRampPalette(rev(c(\"#D73027\",\"#FC8D59\",\"#FEE090\",\"#FFFFBF\",\n",
+    "                               \"#E0F3F8\",\"#91BFDB\",\"#4575B4\")))(64)\n",
+    "lat <- cov2cor(X)\n",
+    "lat[lower.tri(lat)] <- NA\n",
+    "n <- nrow(lat)\n",
+    "print(lattice::levelplot(lat[n:1,],col.regions = clrs,xlab = \"\",ylab = \"\",\n",
+    "                colorkey = TRUE,at = seq(0,1,length.out = 64),\n",
+    "                scales = list(cex = 0.6,x = list(rot = 45))))\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
