remove incorrect title

--- a/Workflow/susie-wgs-prior.ipynb
+++ b/Workflow/susie-wgs-prior.ipynb
@@ -357,7 +357,6 @@
    "outputs": [],
    "source": [
     "[susie_1,susie_cv_1]\n",
-    "\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
     "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
@@ -431,10 +430,7 @@
    "metadata": {
     "kernel": "SoS"
    },
-   "source": [
-    "# Documentation of dummy file\n",
-    "For the pipeline to run smoothly, dummy files were created in previous steps. This step finds all the dummy files and records them into a separate file."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -442,8 +438,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "## Conducting susieR test\n",
-    "This step use the susieR packages to recompute the heritability and the weight of the result"
+    "## Conducting univariate test for all the genes and save the sumstat"
    ]
   },
   {
