mixture prior for mv_susie

--- a/Analysis/ROSMAP_TWAS/MV_susie_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/MV_susie_analysis.ipynb
@@ -2324,11 +2324,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# With mixture prior"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie    \\\n",
+    "--molecular_pheno_dir \"/home/hs3163/Project/Alz/multi/molecular_phenotype_list\"   \\\n",
+    "--region_list \"/home/hs3163/Project/Alz/multi/mv_susie_gene_list.txt\"  \\\n",
+    "--wd \"/home/hs3163/Project/Alz/multi_mp\"  \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\"  \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE  --job_size 1 \\\n",
+    "--cv_times 100  \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie    \\\n",
+    "--molecular_pheno_dir \"/home/hs3163/Project/Alz/multi/molecular_phenotype_list\"   \\\n",
+    "--region_list \"/home/hs3163/Project/Alz/multi/mv_susie_gene_list.txt\"  \\\n",
+    "--wd \"/home/hs3163/Project/Alz/multi_mp_2\"  \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\"  \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE  --job_size 1 \\\n",
+    "--cv_times 100  \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+   ]
   }
  ],
  "metadata": {
