--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -321,7 +321,17 @@
     "--wd ./   \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
-    "--cv_times 2  &"
+    "--cv_times 2  &\n",
+    "\n",
+    "# Test with prior\n",
+    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv \\\n",
+    "--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n",
+    "--region_list region_list  \\\n",
+    "--wd ./   \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
+    "--cv_times 2  \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'&"
    ]
   },
   {
@@ -372,6 +382,12 @@
     "parameter: testing_prop = 0.2\n",
     "# Number of training & testing samples used\n",
     "parameter: cv_times = 100\n",
+    "# Number of training & testing samples used\n",
+    "parameter: cv_times = 100\n",
+    "# Prior: list of prior of cov structure, an RDS file that is a list with an element \"U\" containing the cov structurer and an element \"w\" containintg the weights\n",
+    "# Preferably the output of wgs_prior_genome pipeline.\n",
+    "parameter: mixture_prior = \"NULL\"\n",
+    "\n",
     "\n",
     "\n",
     "# Get regions of interest to focus on.\n",
@@ -683,7 +699,14 @@
     "    # Compute the Cov matrix for Y_complete\n",
     "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])}\n",
     "   \n",
+    "   \n",
+    "    if(is.null('$[mixture_prior]')){\n",
     "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1,center=F,scale=F))\n",
+    "    } else {\n",
+    "    mx_prior = readRDS('$[mixture_prior]')\n",
+    "    prior_covar <- create_mash_prior(mixture_prior = list( weights = mx_prior$w, matrices = mx_prior$U))\n",
+    "    }\n",
+    "   \n",
     "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
@@ -848,7 +871,6 @@
     "    full_model = full_model$m_$[_regions[0]]\n",
     "    X = attach('$[_input[1]]')$scaled_$[_regions[0]][[1]]\n",
     "    Y = attach('$[_input[1]]')$scaled_$[_regions[0]][[2]]\n",
-    "    \n",
     "    # Generate cv dataaset\n",
     "    \n",
     "    \n",
@@ -867,20 +889,37 @@
     "\n",
     "    # Actual cv\n",
     "    \n",
+    "    if(is.null('$[mixture_prior]')){\n",
+    "\n",
+    "    \n",
     "    cv_df = cv_df%>%mutate(\n",
     "    \n",
     "    ## Get the prior\n",
     "    \n",
-    "      prior = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
-    "        create_mash_prior(sample_data = list(X=first,Y=second, residual_variance= third, max_mixture_len=-1,center=F,scale=F))\n",
-    "        )),\n",
+    "        prior = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
+    "        create_mash_prior(sample_data = list( X = first, Y = second, residual_variance = third, max_mixture_len =-1,center =F,scale =F)\n",
+    "        ))) ,\n",
     "        \n",
     "    ## Do msusie\n",
     "    \n",
     "      msusie = pmap(list(train_X,train_Y,cov,prior),function(first,second,third,forth)(\n",
-    "        msusie(first,second, L=10, prior_variance=forth,residual_variance = third,precompute_covariances = TRUE)\n",
-    "        )))\n",
+    "        msusie(first,second, L=10, prior_variance = forth,residual_variance = third,precompute_covariances = TRUE)\n",
+    "        ))\n",
+    "        \n",
+    "        )} else {\n",
+    "   \n",
+    "       mx_prior = readRDS('$[mixture_prior]')\n",
+    "    ## Get the prior\n",
+    "       prior_covar <- create_mash_prior(mixture_prior = list( weights = mx_prior$w, matrices = mx_prior$U))\n",
+    "       \n",
+    "       cv_df = cv_df%>%mutate(\n",
+    "        \n",
+    "    ## Do msusie\n",
     "    \n",
+    "      msusie = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
+    "        msusie(first,second, L=10, prior_variance = prior_covar,residual_variance = third,precompute_covariances = TRUE)\n",
+    "        )))\n",
+    "    }\n",
     "    # Extract data \n",
     "    \n",
     "    cv_df = cv_df%>%mutate(\n",
