new csg.yml template and new steps to transformed mv_susie output

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -239,13 +239,30 @@
     "sos run twas_fusion_susie.ipynb compute_wgt_1 \\\n",
     "  --molecular-pheno ./molecular_phenotype \\\n",
     "  --wd ./ \\\n",
-    "  --genotype_list ./geno_dir\\\n",
+    "  --genotype_list ./geno_dir \\\n",
     "  --region_list ./region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 5 \\\n",
     "  --window 500000 \\\n",
     "  --model blup lasso top1 enet \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \n",
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/.txt \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/mwe/ass_test_mwe/AC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path ~/Project/mwe/mv_susie_mwe/wgt/AC \\\n",
+    "  --weights_list ~/Project/mwe/mv_susie_mwe/wgt/AC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"2G\" \\\n",
+    "  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml \\ \n",
+    "  -s build &\n",
     "  \n"
    ]
   },
@@ -572,19 +589,21 @@
     "chrom_list = list(set(get_output(f'cut -f 3 {weights_list} | tail -n+2').strip().split(\"\\n\")))\n",
     "# Path to GWAS summary statistics data (association results between SNP and disease in a GWAS)\n",
     "parameter: gwas_sumstat = path\n",
-    "parameter: asso_mem = \"60G\"\n",
+    "parameter: max_impute = 0.5\n",
+    "parameter: asso_mem = \"2G\"\n",
     "input: gwas_sumstat, for_each = \"chrom_list\"\n",
     "output:f'{output_path}/{gwas_sumstat:bn}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = asso_mem, tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:and}:{geno_file:and}']\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
     "    --ref_ld_chr $[geno_file:an] \\\n",
     "    --chr $[_chrom_list] \\\n",
+    "    --max_impute $[max_impute] \\\n",
     "    --out $[_output]"
    ]
   },
