--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -1080,7 +1080,7 @@
    ],
    "source": [
     "# Create wgs.RDat file\n",
-    "[fusion_tf_1]\n",
+    "[fusion_tf_cv_1]\n",
     "input:  molecular_pheno_dir,for_each = 'regions'\n",
     "output: dynamic(f'{wd:a}/wgt/*/{name_prefix}.{_regions[0]}.mv.wgt.RDat')\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
@@ -1116,7 +1116,7 @@
     "    dir = \"$[wd:a]/wgt/\"\n",
     "    tis = read.table(text = molecular_pheno[[i,1]], sep = \"/\", as.is = TRUE)\n",
     "    tis = tis[[length(tis)]]\n",
-    "    sur = \"/$[name_prefix].$[_regions[0]].mv.wgt.RDat\"\n",
+    "    sur = \"/$[name_prefix].$[_regions[0]].mv.cv.wgt.RDat\"\n",
     "    out = paste(collapse = \"\",c(dir,tis,sur))\n",
     "    cv.performance = cv.performance_tol[,i]%>%as.matrix()\n",
     "    colnames(cv.performance) = \"mv_susie\"\n",
@@ -1134,6 +1134,95 @@
     "    file = out\n",
     "    )    }\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create wgs.RDat file\n",
+    "[fusion_tf_1]\n",
+    "input:  molecular_pheno_dir,for_each = 'regions'\n",
+    "output: dynamic(f'{wd:a}/wgt/*/{name_prefix}.{_regions[0]}.mv.wgt.RDat')\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_input[0]}.split.stderr', stdout = f'{_input[0]}.split.stderr',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"plink2R\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    #Load the input\n",
+    "    genos = read_plink('$[wd:a]/cache/$[name_prefix].$[_regions[0]].merged')\n",
+    "    molecular_pheno = read_delim('$[_input[0]]',delim = '\\t')\n",
+    "    full_model = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].mv_susie.model.RData')$m_$[_regions[0]]\n",
+    "    #Get all the components\n",
+    "    pval = NA\n",
+    "    rsq = NA\n",
+    "    hsq.pv = NA\n",
+    "    N.tot = nrow(genos$bed)\n",
+    "    cv.performance_tol = rbind(\n",
+    "    rsq = rsq, \n",
+    "    pval = pval\n",
+    "    )\n",
+    "    ## Filter out the snps that are not in the bim for consistancy\n",
+    "    snps = genos$bim%>%filter(V2 %in%full_model$snps )\n",
+    "    \n",
+    "    # Create output for each tissue saperately\n",
+    "\n",
+    "    for(i in 1:nrow(molecular_pheno) ){\n",
+    "    wgt.matrix = full_model$coef[2:nrow(full_model$coef),i]%>%as.matrix()\n",
+    "    hsq = full_model$hsq[i]\n",
+    "    dir = \"$[wd:a]/wgt/\"\n",
+    "    tis = read.table(text = molecular_pheno[[i,1]], sep = \"/\", as.is = TRUE)\n",
+    "    tis = tis[[length(tis)]]\n",
+    "    sur = \"/$[name_prefix].$[_regions[0]].mv.wgt.RDat\"\n",
+    "    out = paste(collapse = \"\",c(dir,tis,sur))\n",
+    "    cv.performance = cv.performance_tol\n",
+    "    colnames(cv.performance) = \"mv_susie\"\n",
+    "    # make the folders\n",
+    "    cmd0 = paste(c(\"mkdir \",dir),collapse = \"\")\n",
+    "    system(cmd0,ignore.stdout=TRUE,ignore.stderr=TRUE)\n",
+    "    cmd1 = paste(c(\"mkdir \",dir,tis),collapse = \"\")\n",
+    "    system(cmd1,ignore.stdout=TRUE,ignore.stderr=TRUE)\n",
+    "    # save the files\n",
+    "    save(\n",
+    "    wgt.matrix,\n",
+    "    snps,\n",
+    "    cv.performance,\n",
+    "    hsq, hsq.pv, N.tot,\n",
+    "    file = out\n",
+    "    )    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[fusion_tf_cv_2]\n",
+    "molecular_pheno = [x.strip().split(\"/\") for x in open(molecular_pheno_dir).readlines() if x.strip() and not x.strip().startswith('#')]\n",
+    "input: region_list, for_each = \"molecular_pheno\"\n",
+    "output: f'{wd:a}/wgt/{_molecular_pheno[1]}/All_wgt_list.txt'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_index}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    # Load the template\n",
+    "    temp = read_delim('$[_input]',delim = \"\\t\")\n",
+    "    # Create name\n",
+    "    dir = \"$[wd:a]/wgt/\"\n",
+    "    tis = \"$[_molecular_pheno[1]]\"\n",
+    "    pre = \"/$[name_prefix].\"\n",
+    "    sur = \".mv.cv.wgt.RDat\"\n",
+    "    res = temp%>%mutate(\n",
+    "    WGT = map_chr(`#region`,~paste(collapse = \"\", c(dir,tis,pre,.x,sur)))\n",
+    "    )%>%select(WGT,ID = `#region`,CHR = chr, P0 = start_position, P1 = end_position)\n",
+    "    res%>%write_delim(\"$[_output]\",delim = \"\\t\")"
    ]
   },
   {
