fusion tf for first half

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -340,6 +340,17 @@
     "--wd ./   \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
+    "--cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n",
+    "--region_list rds_crs  \\\n",
+    "--wd ./   \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container ~/container/twas_latest.sif --impute TRUE \\\n",
     "--cv_times 2  &"
    ]
   },
@@ -1154,20 +1165,24 @@
     "    library(\"readr\")\n",
     "    library(\"purrr\")\n",
     "    #Load the input\n",
-    "    genos = read_plink('$[wd:a]/cache/$[name_prefix].$[_regions[0]].merged')\n",
+    "    genos = read.table('$[wd:a]/cache/$[name_prefix].$[_regions[0]].merged.bim')%>%as.tibble()\n",
     "    molecular_pheno = read_delim('$[_input[0]]',delim = '\\t')\n",
     "    full_model = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].mv_susie.model.RData')$m_$[_regions[0]]\n",
+    "    XY = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].transformed_XY.RData')\n",
+    "    XY = XY$scaled_$[_regions[0]]\n",
+    "    X = XY[[1]]\n",
     "    #Get all the components\n",
     "    pval = NA\n",
     "    rsq = NA\n",
     "    hsq.pv = NA\n",
-    "    N.tot = nrow(genos$bed)\n",
+    "    N.tot = nrow(X)\n",
+    "    snp = colnames(X)\n",
     "    cv.performance_tol = rbind(\n",
     "    rsq = rsq, \n",
     "    pval = pval\n",
     "    )\n",
     "    ## Filter out the snps that are not in the bim for consistancy\n",
-    "    snps = genos$bim%>%filter(V2 %in%full_model$snps )\n",
+    "    snps = genos%>%filter(V2 %in% snp )\n",
     "    \n",
     "    # Create output for each tissue saperately\n",
     "\n",
@@ -1267,7 +1282,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "3.6.1"
   },
   "sos": {
    "kernels": [
