fusion_tf changed

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -366,7 +366,19 @@
     "--wd ./   \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
-    "--cv_times 2  &"
+    "--cv_times 2  &\n",
+    "\n",
+    "\n",
+    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
+    "--molecular_pheno_dir \"mole_pheno_ls\"   \\\n",
+    "--region_list rgd_ls  \\\n",
+    "--wd ./   \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
+    "--cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1091,6 +1103,7 @@
    ],
    "source": [
     "# Create wgs.RDat file\n",
+    "# Create wgs.RDat file\n",
     "[fusion_tf_cv_1]\n",
     "input:  molecular_pheno_dir,for_each = 'regions'\n",
     "output: dynamic(f'{wd:a}/wgt/*/{name_prefix}.{_regions[0]}.mv.wgt.RDat')\n",
@@ -1105,6 +1118,9 @@
     "    genos = read_plink('$[wd:a]/cache/$[name_prefix].$[_regions[0]].merged')\n",
     "    molecular_pheno = read_delim('$[_input[0]]',delim = '\\t')\n",
     "    load('$[wd:a]/result/$[name_prefix].$[_regions[0]].mv_susie.model.cv.RData')\n",
+    "    XY = attach('$[wd:a]/result/$[name_prefix].$[_regions[0]].transformed_XY.RData')\n",
+    "    XY = XY$scaled_$[_regions[0]]\n",
+    "    X = XY[[1]]\n",
     "    #Get all the components\n",
     "    pval = full_model$pval\n",
     "    rsq = full_model$r2\n",
@@ -1117,12 +1133,14 @@
     "    pval = pval\n",
     "    )\n",
     "    ## Filter out the snps that are not in the bim for consistancy\n",
-    "    snps = genos$bim%>%filter(V2 %in%full_model$snps )\n",
+    "    snps = genos$bim%>%filter(V2 %in%colnames(X) )\n",
     "    \n",
     "    # Create output for each tissue saperately\n",
     "\n",
     "    for(i in 1:nrow(molecular_pheno) ){\n",
     "    wgt.matrix = full_model$coef[2:nrow(full_model$coef),i]%>%as.matrix()\n",
+    "    rownames(wgt.matrix) = snps$V2\n",
+    "    colnames(wgt.matrix) = \"mv_susie\"\n",
     "    hsq = full_model$hsq[i]\n",
     "    dir = \"$[wd:a]/wgt/\"\n",
     "    tis = read.table(text = molecular_pheno[[i,1]], sep = \"/\", as.is = TRUE)\n",
@@ -1143,8 +1161,7 @@
     "    cv.performance,\n",
     "    hsq, hsq.pv, N.tot,\n",
     "    file = out\n",
-    "    )    }\n",
-    "    "
+    "    )    }\n"
    ]
   },
   {
@@ -1188,6 +1205,8 @@
     "\n",
     "    for(i in 1:nrow(molecular_pheno) ){\n",
     "    wgt.matrix = full_model$coef[2:nrow(full_model$coef),i]%>%as.matrix()\n",
+    "    rownames(wgt.matrix) = snps$V2\n",
+    "    colnames(wgt.matrix) = \"mv_susie\"\n",
     "    hsq = full_model$hsq[i]\n",
     "    dir = \"$[wd:a]/wgt/\"\n",
     "    tis = read.table(text = molecular_pheno[[i,1]], sep = \"/\", as.is = TRUE)\n",
@@ -1282,7 +1301,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "sos": {
    "kernels": [
