--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -248,7 +248,7 @@
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \n",
     "  \n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
-    "  --gwas_sumstat /home/hs3163/Project/Alz/data/.txt \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/mwe/ass_test_mwe/AC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
@@ -292,19 +292,65 @@
     }
    ],
    "source": [
-    "sos run twas_fusion.ipynb association_test \\\n",
-    "  --gwas_sumstat ./sum_stat.sumstats \\\n",
-    "  --molecular-pheno ./gene_exp_file.txt \\\n",
-    "  --wd ./ \\\n",
-    "  --genotype_list ./genptype_file_LDREF \\\n",
-    "  --region_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/region_list.txt \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/TWAS/wgt/DLPFC/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
-    "  --data_start 5 \\\n",
-    "  --output_path /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/At_output \\\n",
+    "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --model blup lasso top1 enet \\\n",
-    "  --container gaow/twas"
+    "  --weights_path /home/hs3163/Project/TWAS/wgt/DLPFC \\\n",
+    "  --weights_list /home/hs3163/Project/TWAS/wgt/DLPFC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "  \n",
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/TWAS/wgt/PCC/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/TWAS/wgt/PCC \\\n",
+    "  --weights_list /home/hs3163/Project/TWAS/wgt/PCC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "  \n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/TWAS/wgt/AC/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/TWAS/wgt/AC \\\n",
+    "  --weights_list /home/hs3163/Project/TWAS/wgt/AC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -583,14 +629,14 @@
    },
    "outputs": [],
    "source": [
-    "# Association test\n",
+    "# Association test, At least 20G of asso_mem is required.\n",
     "[twas_fusion_5, association_test]\n",
     "depends: weights_list\n",
     "chrom_list = list(set(get_output(f'cut -f 3 {weights_list} | tail -n+2').strip().split(\"\\n\")))\n",
     "# Path to GWAS summary statistics data (association results between SNP and disease in a GWAS)\n",
     "parameter: gwas_sumstat = path\n",
     "parameter: max_impute = 0.5\n",
-    "parameter: asso_mem = \"2G\"\n",
+    "parameter: asso_mem = \"20G\"\n",
     "input: gwas_sumstat, for_each = \"chrom_list\"\n",
     "output:f'{output_path}/{gwas_sumstat:bn}_chr{_chrom_list}.twas.txt'\n",
     "\n",
