bug fix and modify mwe

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -330,8 +330,11 @@
     "--wd ./   \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
-    "--cv_times 2  \\\n",
-    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'&\n",
+    "--cv_times 100  \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 50 -q neurology -c /mnt/mfs/statgen/pbs_template/csg.yml &\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
@@ -375,7 +378,7 @@
     "--wd ./   \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE \\\n",
-    "--cv_times 2  &\n",
+    "--cv_times 100  &\n",
     "\n",
     "\n",
     "\n"
@@ -710,6 +713,7 @@
     "    for(i in 1:ncol(tmp)){\n",
     "        tmp[,i]=tmp[,i]%>%scale()}\n",
     "        return(tmp)}}\n",
+    "                 \n",
     "    if ($[impute] == TRUE){\n",
     "    # Load X data\n",
     "    X_$[_regions[0]]_raw = read_plink(\"$[_input[1]:n]\")$bed\n",
@@ -734,7 +738,7 @@
     "    Y_$[_regions[0]] = Y_$[_regions[0]]%>%arrange(match(name,rownames(X_$[_regions[0]])))%>%select(-name)%>%as.matrix()\n",
     "    # Scale Y\n",
     "    Y_complete_$[_regions[0]] = Y_$[_regions[0]]%>%na.omit()\n",
-    "    Y_$[_regions[0]] = impute_and_transform(Y_$[_regions[0]], impute = FALSE)\n",
+    "    Y_$[_regions[0]] = scale(Y_$[_regions[0]])\n",
     "    # Get prior\n",
     "    # Compute the Cov matrix for Y_complete\n",
     "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])}\n",
@@ -789,7 +793,7 @@
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.cv.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -887,23 +891,18 @@
     "      if (length(rm_col)) X <- X[, -rm_col]\n",
     "      return(mean_impute(X))\n",
     "    }\n",
-    "    \n",
+    "                 \n",
     "    ### Produce CV dataset\n",
     "    cv_data_gen = function(X,Y,times,test_prop){\n",
     "    # Merged the X and Y for producing testing and training set for modelr cv\n",
     "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
     "    cv_df = crossv_mc(cv_df_raw, times,test = test_prop)%>%mutate(\n",
     "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
+    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix%>%scale),\n",
     "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix%>%scale)\n",
     "    )  \n",
     "    \n",
-    "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
-    "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
-    "    )\n",
     "    return(cv_df)\n",
     "    }\n",
     "    \n",
@@ -969,9 +968,15 @@
     "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
     "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
     "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
+    "        # Identify what runs to skip\n",
+    "      skipped = map(r2_raw,~sum(.x%>%sum)%>%is.na()), \n",
     "      pval = map2(test_Y,test_fitted,~compute_pval(.x,.y))\n",
     "    )\n",
     "    \n",
+    "    # Remove the runs to be skipped \n",
+    "    \n",
+    "    cv_df = cv_df%>%filter(skipped != TRUE)\n",
+    "                    \n",
     "    # Calculate metrics\n",
     "    \n",
     "    mean_rmse = cv_df%>%pull(rmse)%>%as.data.frame()%>%t()%>%as_tibble()%>%na.omit()%>%colMeans()\n",
