--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -793,7 +793,7 @@
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.cv.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '10G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '12G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -916,7 +916,9 @@
     "    \n",
     "    cv_df = cv_data_gen(X,Y,$[cv_times],$[testing_prop])\n",
     "    \n",
-    "                                                      \n",
+    "    # Filter out the runs with constant column in X\n",
+    "    cv_df = cv_df%>%mutate(keep = map_dbl(train_X,~ which(apply(.x, 2, is_zero_variance))%>%length()==0))%>%filter(keep == 1 )\n",
+    "                                                          \n",
     "    # Compute the cov matrix for training set Y based on the choice of imputation                  \n",
     "                         \n",
     "    if ($[impute] == TRUE){\n",
